--- a/composer.json
+++ b/composer.json
@@ -48,16 +48,12 @@
             "[ -L .Build/Web/typo3conf/ext/t3deploy ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/t3deploy"
         ],
         "test:unit": [
-            "[ -e '.Build/bin/phpunit' ] || composer cleanupdate",
+            "[ -e '.Build/bin/phpunit' ] || composer update",
             "TYPO3_PATH_ROOT=$(pwd)/.Build/Web .Build/bin/phpunit --colors -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit"
         ],
         "test:functional": [
-            "[ -e '.Build/bin/phpunit' ] || composer cleanupdate",
+            "[ -e '.Build/bin/phpunit' ] || composer update",
             "TYPO3_PATH_ROOT=$(pwd)/.Build/Web .Build/bin/phpunit --colors -c .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml Tests/Functional"
-        ],
-        "cleanupdate": [
-            "rm -rf ./.Build",
-            "composer update"
         ]
     },
     "keywords": [
