--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
             "email": "dev@aoe.com"
         }
     ],
+    "require": {
+        "helhum/typo3-console": "^4.0 || ^5.0"
+    },
     "require-dev": {
         "typo3/cms": "^7.6",
         "nimut/testing-framework": "^2.0.0"
@@ -17,6 +20,9 @@
         "t3deploy": "*"
     },
     "autoload": {
+        "psr-4": {
+            "AOE\\T3Deploy\\": "Classes"
+        },
         "classmap": [
             "Classes"
         ]
