--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
             "email": "dev@aoe.com"
         }
     ],
+    "require": {
+        "php": ">= 5.5, < 7.3",
+        "typo3/cms-core": ">=7.6.0",
+        "helhum/typo3-console": ">=4.0"
+    },
     "require-dev": {
         "typo3/cms": "^7.6",
-        "nimut/testing-framework": "^2.0.0"
-    },
-    "replace": {
-        "t3deploy": "*"
+        "nimut/testing-framework": "^4.1"
     },
     "autoload": {
         "psr-4": {
@@ -42,16 +44,18 @@
             "web-dir": ".Build/Web"
         }
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://composer.typo3.org/"
-        }
-    ],
     "scripts": {
         "post-autoload-dump": [
             "mkdir -p .Build/Web/typo3conf/ext/",
             "[ -L .Build/Web/typo3conf/ext/t3deploy ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/t3deploy"
+        ],
+        "test:functional": [
+            "[ -e .Build/bin/phpunit ] || composer update",
+            "TYPO3_PATH_WEB=$PWD/.Build/Web .Build/bin/phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml Tests/Functional"
+        ],
+        "test:unit": [
+            "[ -e .Build/bin/phpunit ] || composer update",
+            "TYPO3_PATH_WEB=$PWD/.Build/Web .Build/bin/phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit"
         ]
     },
     "keywords": [
