--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ env:
   - TYPO3_VERSION=dev-master COVERAGE=0 FUNCTIONAL=0
 
 matrix:
+  exclude:
+    - env: TYPO3_VERSION=dev-master COVERAGE=0
+      php: 7.0
+    - env: TYPO3_VERSION=dev-master COVERAGE=0
+      php: 7.1
   include:
     - env: TYPO3_VERSION=^7.6 COVERAGE=1 FUNCTIONAL=1
       php: 7.1
