[TASK] Code review fixes
- Update Typo3 version in ext_emconf.php and composer.json.
- Add mysql service in travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ matrix:
     - env: TYPO3_VERSION=dev-master COVERAGE=0 FUNCTIONAL=0
     - php: 7.3
 
+services:
+  - mysql
+
 notifications:
   email:
     # recipients:
