--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">= 7.0, < 7.3",
-        "typo3/cms-core": ">=7.6.0",
+        "typo3/cms-core": ">=8.7.0,<=8.7.99",
         "helhum/typo3-console": ">=4.0"
     },
     "require-dev": {
